--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "framer-motion": "^12.19.1",
     "input-otp": "^1.2.4",
     "lucide-react": "^0.462.0",
-    "musictempo": "^0.2.1",
+    "music-tempo": "^0.2.1",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-day-picker": "^8.10.1",
