--- a/package.json
+++ b/package.json
@@ -55,6 +55,8 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
+    "react-rotary-knob": "^3.0.3",
+    "react-rotary-knob-skin-pack": "^1.0.2",
     "react-router-dom": "^6.26.2",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
